# Spider-Programming-Language

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
HelloWorld/: README.md  web.toml
HelloWorld/src/: main.sp
book/: README.md  SUMMARY.md  book.toml
book/book/: 404.html  cli.html  comparisons.html  index.html  installing.html  introduction.html  lsp-learn.html  print.html  status.html  toc-968e1df8.js  toc.html  web-package-manager.html  welcome.html
book/book/appendix/: faq.html  glossary.html  grammar.html  keywords-precedence.html  troubleshooting.html  validation-report.html
book/book/guides/: adding-features.html  contributing.html
book/book/internals/: compiler.html  formatter.html  package-loader-registry.html  silk-vm.html
book/book/language/: collections-outcomes.html  concurrency.html  control-flow.html  expressions.html  functions.html  lexical-structure.html  modules.html  records-choices-patterns.html  testing.html  values-and-types.html
book/book/reference/: bytecode.html  cli-reference.html  diagnostics.html  language-reference.html  standard-library.html
book/book/tutorials/: cookbook.html  exercises.html  projects.html  tutorial.html
book/src/: SUMMARY.md  cli.md  comparisons.md  installing.md  introduction.md  lsp-learn.md  status.md  web-package-manager.md  welcome.md
book/src/appendix/: faq.md  glossary.md  grammar.md  keywords-precedence.md  troubleshooting.md  (+1 more)
corpus/check_err/: matching.diag.txt  matching.sp  names.diag.txt  names.sp  types.diag.txt  types.sp
corpus/check_ok/: functions.sp  generics.sp  outcomes.sp  script.sp
corpus/err/: err_block.diag.txt  err_block.sp  err_block.tree.txt  err_expr.diag.txt  err_expr.sp  err_expr.tree.txt  err_indent.diag.txt  err_indent.sp  err_indent.tree.txt
corpus/ok/: bindings.sp  bindings.tree.txt  collections.fmt.sp  collections.sp  collections.tree.txt  comments.sp  comments.tree.txt  concurrency.fmt.sp  concurrency.sp  concurrency.tree.txt  control.fmt.sp  control.sp  control.tree.txt  functions.fmt.sp  functions.sp  functions.tree.txt  hello.fmt.sp  hello.tree.txt  modules.fmt.sp  modules.tree.txt  outcomes.fmt.sp  outcomes.sp  outcomes.tree.txt  shapes.fmt.sp  shapes.sp  shapes.tree.txt  soft_names.fmt.sp  soft_names.sp  soft_names.tree.txt
corpus/run/: collections.out.txt  collections.sp  loops.out.txt  loops.sp  outcomes.out.txt  outcomes.sp  showcase.out.txt  showcase.sp
crates/spider-cli/: Cargo.toml
crates/spider-cli/src/: main.rs
crates/spider-fmt/: Cargo.toml
crates/spider-hir/: Cargo.toml
crates/spider-lsp/: Cargo.toml
crates/spider-playground/: Cargo.toml
crates/spider-playground/src/: lib.rs
crates/spider-silk/: Cargo.toml
crates/spider-syntax/: Cargo.toml
crates/spider-syntax/src/: ast.rs  concepts.rs  diagnostics.rs  interpolation.rs  kind.rs  lexer.rs  lib.rs  parser.rs  tree.rs
crates/spider-syntax/tests/: fuzz_smoke.rs  golden.rs
crates/spider-web/: Cargo.toml
crates/spider-web/src/: lib.rs  loader.rs  registry.rs
docs/: 0001-software-requirements-specification.md  0002-language-design-document.md  0003-architecture-decision-log.md  0004-m1-hatchling-notes.md  0005-m2-spinneret-notes.md  0006-m3-silk-notes.md  0007-m4-web-spinning-notes.md  0008-m5-first-thread-notes.md  0009-m6-loom-notes.md
website/: index.html  learn.html  playground.html  spider.js  spider.wasm  style.css  vercel.json
website/book/: 404.html  cli.html  comparisons.html  installing.html  introduction.html  lsp-learn.html  print.html  searcher-09f2665d.js  searchindex-82fdaa66.js  status.html  web-package-manager.html
(+73 files in other folders)
