[package]
name = "spider-cli"
description = "The spider command-line tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "spider"
path = "src/main.rs"

[dependencies]
spider-syntax = { path = "../spider-syntax" }
spider-hir = { path = "../spider-hir" }
spider-silk = { path = "../spider-silk" }
spider-web = { path = "../spider-web" }
spider-lsp = { path = "../spider-lsp" }
spider-fmt = { path = "../spider-fmt" }
