[package]
name = "spider-playground"
description = "The real Spider compiler + Silk VM compiled to WebAssembly for the browser playground"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spider-syntax = { path = "../spider-syntax" }
spider-hir = { path = "../spider-hir" }
spider-silk = { path = "../spider-silk" }
